<resources>
    <string name="app_name" translatable="false">CorrectSoc</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="version">Version</string>
    <string name="select_language">Select your language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="network_scanner">Services</string>
    <string name="self_test">Check router status</string>
    <string name="app_lock">Secured Applications</string>
    <string name="device_scan">Connected wifi device Scan</string>
    <string name="apps_scan">Scan spy apps</string>
    <string name="premium">Buy premium</string>
    <string name="support">Get support</string>
    <string name="setting">Settings</string>
    <string name="reward">Free reward</string>
    <string name="community">Join the community</string>
    <string name="rate">Rate us</string>
    <string name="about">About us</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="notification">Notification setting</string>
    <string name="language">Language</string>
    <string name="share">Share with friends</string>
    <string name="feedback">Send feedback</string>
    <string name="security">Security</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="self_pen">Check router status</string>
    <string name="self_body_1">Test your network for\nexternal open ports</string>
    <string name="self_body_2">Please, Enable the Wi-Fi\nconnection on the network\nyou would like to scan</string>
    <string name="self_body_3">IP- Address Detected\n</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="detect_msg">Detecting IP</string>
    <string name="patience">Please wait…</string>
    <string name="stop">Stop</string>
    <string name="app_status">App Status</string>
    <string name="safe">Safe</string>
    <string name="warning">Warning</string>
    <string name="danger">Danger</string>
    <string name="scan">Scan</string>
    <string name="applications">Threats application</string>
    <string name="scan_device">Scanning connected devices…</string>
    <string name="conntected_devices">Wifi connected devices information</string>
    <string name="web_scan">Scan secure link</string>
    <string name="about_txt">At CorrectSOC, our mission is to protect your privacy and ensure the security of your personal information.\nWe understand the increasing threats in the digital world, and our app is designed to provide you with top-notch protection against spyware and malicious activities.\nOur app is designed to detect and neutralize spyware, ensuring that your personal information remains confidential.</string>
    <string name="enter_link">Enter Link</string>
    <string name="enter_ip">Enter IP</string>
    <string name="device_name">• Device name</string>
    <string name="port">Port :</string>
    <string name="Service">Service :</string>
    <string name="Protocol">Protocol :</string>
    <string name="Version">Version :</string>
    <string name="CVE_Count">CPE :</string>
    <string name="CVEs">CVEs :</string>
    <string name="invalid_link">Invalid URL</string>
    <string name="invalid_ip">Invalid IP Address</string>
    <string name="scan_type">Choose Scan Type</string>
    <string name="ip_scan">IP Scan</string>
    <string name="router_scan">Connected Wifi devices</string>
    <string name="id">ID :</string>
    <string name="url">URL : </string>
    <string name="cvss">CVSs : </string>
    <string name="deviceName">Device Name :</string>
    <string name="Mac">Mac Address :</string>
    <string name="Vendor">Vendor Name :</string>
    <string name="waiting_msg">Thanks for your patience, we are scanning your Wi-Fi devices now</string>
    <string name="search">Search …</string>
    <string name="not_found_search">Sorry, we can\'t find any device with this IP address</string>
    <string name="app_search_not_found">Sorry, we can\'t find any application with this name</string>
    <string name="update_title">Warning</string>
    <string name="update_msg">There is a new version of the app on store that make you more secure\n
    do you want to update now ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="anti_spy_title">Anti-Spy Application</string>
    <string name="anti_spy_msg">Protect your privacy effortlessly with our Anti-Spy\nMobile App - Sign up now to stay secure!</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_title">Welcome to CorrectSOC</string>
    <string name="already_have_account">Already have account ?\nSign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="phone">Mobile number</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="new_user">Don\'t have account ? Sign up</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="code">Verification Code</string>
    <string name="verification">Check your phone</string>
    <string name="verification_msg">Please enter the verification code sent\nto</string>
    <string name="verification_expires">Code expire in</string>
    <string name="verify">Verify</string>
    <string name="resend">Send again</string>
    <string name="reset_password">Reset your password</string>
    <string name="request_new_password">Please enter your new password</string>
    <string name="password_instruction">Your Password must be at least 6 characters and contain one number, one uppercase letter , one lowercase letter and one symbol</string>
    <string name="update_password">Update password</string>
    <string name="update_ur_pass">Update your password</string>
    <string name="current_password">Current Password *</string>
    <string name="new_password">New Password *</string>
    <string name="confirm_password">Confirm New Password *</string>
    <string name="astrisc" translatable="false">************</string>
    <string name="update">Update</string>
    <string name="update_details">Update details</string>
    <string name="edit_info">Edit Information</string>
    <string name="fname">First name</string>
    <string name="enter_fname">Enter your first name</string>
    <string name="enter_lname">Enter your last name</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="lname">Last name</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="code_expired">Code expired, please request sending it again</string>
    <string name="required_data">Please fill all required data</string>
    <string name="restart_required">Installing successfully… application will restart in 5 seconds</string>
    <string name="pay_details">Payment Details</string>
    <string name="request_info">Enter your information</string>
    <string name="device_number">Select the number of devices which you want to buy</string>
    <string name="enter_device_number">Enter number of your devices</string>
    <string name="duration">Subscription duration</string>
    <string name="total_price">Total price : </string>
    <string name="select">Select duration</string>
    <string name="checkout">Checkout</string>
    <string name="payment_method">Payment method</string>
    <string name="not_match">Password doesn\'t match with confirm password</string>
    <string name="username_updated">Username updated successfully</string>
    <string name="phone_updated">Phone updated successfully</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="subscription_end">Your subscription is being ended, please buy a premium version</string>
    <string name="select_payment">Select one of the payment methods</string>
    <string name="google_pay" translatable="false">Google Pay</string>
    <string name="activation_code">Activation Code</string>
    <string name="google_pay_msg">Pay directly from your bank card</string>
    <string name="activation_msg">Get code from support through whatsapp</string>
    <string name="activation_msg_2">Enter the code manually</string>
    <string name="enter_promo">Enter promo code</string>
    <string name="delete_account">Delete account</string>
    <string name="phone_not_found">There is no user registered in this device before</string>
    <string name="phone_empty">There is no user registered in this device before\nplease register user first or enter your phone number first</string>
    <string name="empty_device_duration">Please enter devices number and duration first</string>
    <string name="choose_pay">Please choose one payment method</string>
    <string name="call">Call</string>
    <string name="distributors">Distributors</string>
    <string name="temp_phone" translatable="false">01234567890</string>
    <string name="invalid_code">Invalid activation code</string>
    <string name="share_with">Share with …</string>
    <string name="not_supported">Not supported yet</string>
    <string name="click_here">Click here</string>
    <string name="receipt_summary">Receipt Summary</string>
    <string name="promo_code">Promo code</string>
    <string name="apply">Apply</string>
    <string name="six_months">6 months</string>
    <string name="one_year">1 year</string>
    <string name="more_devices">devices</string>
    <string name="one_device">device</string>
    <string name="discount">Discount</string>
    <string name="payment_successful">Payment successfully\ndone</string>
    <string name="scan_successful">Scan successfully done</string>
    <string name="temp_ad_title" translatable="false">20% OFF</string>
    <string name="temp_ad_description" translatable="false">Vouchers for all new users</string>
    <string name="buy">Buy now</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_msg">Are you sure you want to delete your account permanently</string>
    <string name="delete">Delete</string>
    <string name="months">months</string>
    <string name="no_promo">We are sorry… this is not available promo-code</string>
    <string name="zero" translatable="false">0.0 $</string>
    <string name="more_txt" translatable="false">…</string>
    <string name="discount_off">OFF</string>
    <string name="error">Sorry… an error occurred please try again later</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="one" translatable="false">1</string>
    <string name="scanning">Still scanning … please wait</string>
    <string name="lock">Secured</string>
    <string name="unlock">Unsecured</string>
    <string name="unlock_password">PIN number for securing applications</string>
    <string name="password_empty">Password shouldn\'t be empty</string>
    <string name="less_password">Password should be 4 characters</string>
    <string name="app_locked_successfully">Application locked successfully</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="notification_required">Notification is required for lock applications</string>
    <string name="notification_sorry">We are sorry… you should enable notification permission manually</string>
    <string name="permission_required">Permission Required</string>
    <string name="usage_access_msg">In Android 7.0 or above, you must permit usage access for Correctsoc so that you can use Correctsoc feature.</string>
</resources>