<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/update_title"
        android:textColor="@color/warning_color"
        android:textSize="@dimen/_14ssp"
        app:drawableStartCompat="@drawable/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/update_msg"
        android:textColor="@color/dark_purple"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@id/txt_message"
        android:text="@string/ok"
        android:textColor="@color/blue_link"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/barlow_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/txt_message"
        android:text="@string/cancel"
        android:textColor="@color/blue_link"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toEndOf="@id/btn_ok"
        android:fontFamily="@font/barlow_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>