<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/language_dialog_drawable">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/select_language"
        android:textSize="@dimen/_18ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_title"
        android:layout_marginStart="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_37sdp"
        android:background="@drawable/language_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_english"
        android:layout_marginStart="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_37sdp"
        android:layout_marginBottom="@dimen/_46sdp"
        android:background="@drawable/language_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/arabic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</RelativeLayout>