<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_7sdp"
    android:layout_marginEnd="@dimen/_7sdp"
    android:layout_marginBottom="@dimen/_6sdp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/alphaBlack"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_4sdp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/vertical_line_drawable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/id"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/port"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_toEndOf="@id/id"/>

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/url"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/txt_id"/>

                <TextView
                    android:id="@+id/txt_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/Service"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_toEndOf="@id/url"
                    android:layout_below="@id/txt_id"/>

                <TextView
                    android:id="@+id/cvss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/cvss"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/txt_url"/>

                <TextView
                    android:id="@+id/txt_cvss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/Protocol"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_toEndOf="@id/cvss"
                    android:layout_below="@id/txt_url"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>