<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.EditInfoFragment"
    android:background="@drawable/auth_bg">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alphaBlack"/>

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_27sdp"
        android:layoutDirection="locale"
        android:paddingStart="@dimen/_9sdp"
        android:paddingEnd="@dimen/_9sdp"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/_7sdp"
            android:layout_alignParentStart="true"
            android:src="@drawable/arrow_icon" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/btn_back"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/edit_info"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        android:text="@string/fname"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_35sdp"
        android:id="@+id/txtView_fname"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_12ssp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_fname"
        style="@style/AuthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtView_fname"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_fname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:hint="@string/enter_fname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/alphaWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_fname"
        android:text="@string/lname"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_18sdp"
        android:id="@+id/txtView_lname"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_12ssp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_lname"
        style="@style/AuthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtView_lname"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_lname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:hint="@string/enter_lname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/alphaWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_lname"
        android:text="@string/phone"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_18sdp"
        android:id="@+id/txtView_phone"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_12ssp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone"
        style="@style/AuthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtView_phone"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="phone"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:digits="0123456789"
            android:textColor="@color/white"
            android:textColorHint="@color/alphaWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_38sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="@dimen/_9sdp"
        android:paddingBottom="@dimen/_9sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/dark_purple"
        android:textSize="@dimen/_15ssp"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>